# setup-fortran-conda

./: CHANGELOG.md  CMakeLists.txt  Doxyfile  LICENSE  README.md  STATUS.md  action.yml  check-action-uses.js  extra.js  fpm.toml  index.html  index.js  meson.build  package-lock.json  package.json  release.sh  search.html  update-readme-status.sh
.github/: dependabot.yml
.github/actions/setup-fortran-conda/: action.yml  index.js  package.json
.github/workflows/: CI-CD.yml  CI.yml  CI_cmake.yml  CI_fpm.yml  Doc.yml  Doc_doxygen.yml  Doc_ford.yml  dependabot.yml
doc/doxygen/html/: doxygen_crawl.html  md_CHANGELOG.html  md_README.html  navtreedata.js  navtreeindex0.js  pages.html
doc/doxygen/latex/: md_CHANGELOG.tex  md_README.tex  refman.tex
doc/ford/: index.html  modules.json  search.html
doc/ford/lists/: files.html  modules.html  procedures.html  programs.html
doc/ford/module/: main.html
doc/ford/proc/: say_hello.html
doc/ford/program/: check.html  mpi_hello.html
html/: doxygen_crawl.html  md_README.html  navtreedata.js  navtreeindex0.js  pages.html
html/search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  searchdata.js
latex/: md_README.tex
lists/: files.html  modules.html  procedures.html
module/: main.html
platform/lin/: aocc.js  aomp.js  flang-new.js  flang.js  gfortran.js  ifx.js  lfortran.js  mpifort.js  mpiifx.js  nvfortran.js
platform/mac/: flang-new.js  gfortran.js  ifx.js  lfortran.js  mpifort.js  mpiifx.js
platform/win/: flang-new.js  flang.js  gfortran.js  ifx.js  lfortran.js  mpifort.js  mpiifx.js
proc/: say_hello.html
program/: check.html
scripts/: aggregate-versions.js  generate-status-cmake.sh  generate-status-fpm.sh  generate-status-md.sh  generate-status-meson.sh  release.js  update-readme-compiler-table.sh  update-readme-fpm-deps.js  update-readme-fpm-modules.js  update-readme-matrix-table.js  update-readme-status.sh
search/: search_database.json
sourcefile/: check.f90.html  main.f90.html
src/: check.f90
test/: mpi_hello.f90
(+65 files in other folders)
